--- a/2_fullyconnected.ipynb
+++ b/2_fullyconnected.ipynb
@@ -694,6 +694,168 @@
       },
       "cell_type": "code",
       "source": [
+        "n_hidden = 1024 "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "to1wOfwRDE4o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "batch_size = 128\n",
+        "\n",
+        "graph = tf.Graph()\n",
+        "with graph.as_default():\n",
+        "\n",
+        "  # Input data. For the training data, we use a placeholder that will be fed\n",
+        "  # at run time with a training minibatch.\n",
+        "  tf_train_dataset = tf.placeholder(tf.float32,\n",
+        "                                    shape=(batch_size, image_size * image_size))\n",
+        "  tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+        "  tf_valid_dataset = tf.constant(valid_dataset)\n",
+        "  tf_test_dataset = tf.constant(test_dataset)\n",
+        "  \n",
+        "   # Variables for hidden layer\n",
+        "  weights_h = tf.Variable(\n",
+        "    tf.truncated_normal([image_size * image_size, n_hidden]))\n",
+        "  biases_h = tf.Variable(tf.zeros([n_hidden]))\n",
+        "  \n",
+        "  # Variables for logits\n",
+        "  weights = tf.Variable(\n",
+        "    tf.truncated_normal([n_hidden, num_labels]))\n",
+        "  biases = tf.Variable(tf.zeros([num_labels]))\n",
+        "  \n",
+        "  # Training computation.\n",
+        "  logits_h = tf.matmul(tf_train_dataset, weights_h) + biases_h\n",
+        "  h = tf.nn.relu(logits_h)\n",
+        "  logits = tf.matmul(h, weights) + biases\n",
+        "  \n",
+        "  loss = tf.reduce_mean(\n",
+        "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
+        "  \n",
+        "  # Optimizer.\n",
+        "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
+        "  \n",
+        "  # Predictions for the training, validation, and test data.\n",
+        "  train_prediction = tf.nn.softmax(logits)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "acJ7A5t9EFF_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "valid_pred_h = tf.nn.relu(tf.matmul(tf_valid_dataset, weights_h) + biases_h)\n",
+        "valid_prediction = tf.nn.softmax(\n",
+        "    tf.matmul(valid_pred_h, weights) + biases)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "HpeSIQV4HMl2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "test_pred_h = tf.nn.relu(tf.matmul(tf_test_dataset, weights_h) + biases_h)\n",
+        "test_prediction = tf.nn.softmax(\n",
+        "    tf.matmul(test_pred_h, weights) + biases)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "9A6mAjoWHWLl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 425
+        },
+        "outputId": "5bf79ca6-4c0e-4ce0-b85d-c8779cd19ad9"
+      },
+      "cell_type": "code",
+      "source": [
+        "num_steps = 3001\n",
+        "\n",
+        "with tf.Session(graph=graph) as session:\n",
+        "  tf.global_variables_initializer().run()\n",
+        "  print(\"Initialized\")\n",
+        "  for step in range(num_steps):\n",
+        "    # Pick an offset within the training data, which has been randomized.\n",
+        "    # Note: we could use better randomization across epochs.\n",
+        "    offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+        "    # Generate a minibatch.\n",
+        "    batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+        "    batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+        "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
+        "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
+        "    # and the value is the numpy array to feed to it.\n",
+        "    feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+        "    _, l, predictions = session.run(\n",
+        "      [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+        "    if (step % 500 == 0):\n",
+        "      print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
+        "      print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
+        "      print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
+        "        valid_prediction.eval(), valid_labels))\n",
+        "  print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(),\n",
+        "                                           test_labels))"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Initialized\n",
+            "Minibatch loss at step 0: 371.414795\n",
+            "Minibatch accuracy: 13.3%\n",
+            "Validation accuracy: 30.7%\n",
+            "Minibatch loss at step 500: 15.872331\n",
+            "Minibatch accuracy: 85.2%\n",
+            "Validation accuracy: 80.1%\n",
+            "Minibatch loss at step 1000: 7.553767\n",
+            "Minibatch accuracy: 78.1%\n",
+            "Validation accuracy: 81.3%\n",
+            "Minibatch loss at step 1500: 12.143724\n",
+            "Minibatch accuracy: 83.6%\n",
+            "Validation accuracy: 79.5%\n",
+            "Minibatch loss at step 2000: 1.775827\n",
+            "Minibatch accuracy: 84.4%\n",
+            "Validation accuracy: 82.5%\n",
+            "Minibatch loss at step 2500: 10.847656\n",
+            "Minibatch accuracy: 82.8%\n",
+            "Validation accuracy: 82.8%\n",
+            "Minibatch loss at step 3000: 4.382936\n",
+            "Minibatch accuracy: 81.2%\n",
+            "Validation accuracy: 81.5%\n",
+            "Test accuracy: 87.8%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "jNjTqF1PHcu2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "execution_count": 0,
